# ntpsec-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
crates/ntpsec-rs/: Cargo.toml  README.md
crates/ntpsec-rs-core/: Cargo.toml  README.md
crates/ntpsec-rs-core/src/: binio.rs  control_client.rs  daemon_engine.rs  gpstolfp.rs  ieee754io.rs  leap_query.rs  lib.rs  ntp_assert.rs  ntp_auth.rs  ntp_calendar.rs  ntp_config.rs  ntp_control.rs  ntp_debug.rs  ntp_dns.rs  ntp_endian.rs  ntp_filegen.rs  ntp_fp.rs  ntp_io.rs  ntp_leapsec.rs  ntp_lists.rs  ntp_loopfilter.rs  ntp_malloc.rs  ntp_monitor.rs  ntp_net.rs  ntp_packetstamp.rs  ntp_peer.rs  ntp_proto.rs  ntp_recvbuff.rs  ntp_refclock.rs  ntp_restrict.rs  ntp_sandbox.rs  ntp_scanner.rs  ntp_signd.rs  ntp_stdlib.rs  ntp_syscall.rs  ntp_syslog.rs  ntp_timer.rs  ntp_types.rs  ntp_util.rs  ntpdig_proto.rs  (+23 more)
crates/ntpsec-rs-d/: Cargo.toml  README.md
crates/ntpsec-rs-d/src/: main.rs
crates/ntpsec-rs-d/tests/: smoke.rs
crates/ntpsec-rs-dig/: Cargo.toml  README.md
crates/ntpsec-rs-dig/src/: main.rs
crates/ntpsec-rs-dig/tests/: smoke.rs
crates/ntpsec-rs-frob/: Cargo.toml  README.md
crates/ntpsec-rs-frob/src/: main.rs
crates/ntpsec-rs-io/: Cargo.toml  README.md
crates/ntpsec-rs-io/src/: lib.rs
crates/ntpsec-rs-keygen/: Cargo.toml  README.md
crates/ntpsec-rs-keygen/src/: main.rs
crates/ntpsec-rs-keygen/tests/: smoke.rs
crates/ntpsec-rs-leapfetch/: Cargo.toml  README.md
crates/ntpsec-rs-leapfetch/src/: main.rs
crates/ntpsec-rs-loggps/: Cargo.toml  README.md
crates/ntpsec-rs-loggps/src/: main.rs
crates/ntpsec-rs-logtemp/: Cargo.toml  README.md
crates/ntpsec-rs-logtemp/src/: main.rs
crates/ntpsec-rs-mon/: Cargo.toml  README.md
crates/ntpsec-rs-mon/src/: main.rs
crates/ntpsec-rs-query/: Cargo.toml  README.md
crates/ntpsec-rs-query/src/: main.rs
crates/ntpsec-rs-query/tests/: smoke.rs
crates/ntpsec-rs-snmpd/: Cargo.toml  README.md
crates/ntpsec-rs-snmpd/src/: main.rs
crates/ntpsec-rs-sweep/: Cargo.toml  README.md
crates/ntpsec-rs-sweep/src/: main.rs
crates/ntpsec-rs-time/: Cargo.toml  README.md
crates/ntpsec-rs-time/src/: main.rs
crates/ntpsec-rs-trace/: Cargo.toml  README.md
crates/ntpsec-rs-trace/src/: main.rs
crates/ntpsec-rs-viz/: Cargo.toml  README.md
crates/ntpsec-rs-viz/src/: main.rs
crates/ntpsec-rs-wait/: Cargo.toml  README.md
crates/ntpsec-rs-wait/src/: main.rs
crates/ntpsec-rs/src/: lib.rs
docker/: README.md  alpine.dockerfile  build-all.sh  debian-stable.dockerfile  fedora.dockerfile  freebsd.dockerfile  macos.dockerfile  run-matrix.sh  show_funcs.sh  ubuntu-lts.dockerfile
docker/config/: oracle-ntp.conf
docker/results/alpine/: associations_forward.diff  associations_forward.normalised.real.txt  associations_forward.normalised.rust.txt  associations_forward.rust.txt  associations_reverse.real.txt  associations_reverse.stderr  container_result.txt  git_commit.txt  metadata.txt  ntpd-rs.sha256  ntpd_version.txt  ntpdig-rs.sha256  ntpdig_real.txt  ntpdig_rs.txt  ntpq-rs.sha256  ntpq.sha256  ntpq_version.txt  os_release.txt  peers_forward.diff  peers_forward.normalised.rust.txt  peers_forward.real.txt  peers_forward.rust.txt  peers_reverse.real.txt  rv_forward.diff  rv_forward.normalised.real.txt  rv_forward.normalised.rust.txt  rv_forward.real.txt  rv_forward.rust.txt  rv_reverse.real.txt  rv_reverse.stderr  rv_reverse_rs.txt  rv_sighup.txt
docker/results/debian-stable/: associations_forward.diff  container_result.txt  daemon_capprm.txt  git_commit.txt  metadata.txt  ntpd-rs.sha256  ntpdig_rs.txt  ntpq-rs.sha256  ntpq_version.txt  peers_forward.diff  peers_forward.normalised.real.txt  peers_forward.normalised.rust.txt  peers_reverse.stderr  rv_forward.diff  rv_forward.normalised.real.txt  rv_forward.normalised.rust.txt  rv_forward.real.txt  rv_forward.rust.txt
docker/results/fedora/: associations_forward.real.txt  container_result.txt  git_commit.txt  metadata.txt  ntpd-rs.sha256  ntpd_version.txt  ntpdig_real.txt  ntpdig_rs.txt  ntpq-rs.sha256  ntpq_version.txt  os_release.txt  rv_forward.diff  rv_forward.normalised.real.txt  rv_forward.normalised.rust.txt  rv_forward.real.txt  rv_forward.rust.txt
docker/results/ubuntu-lts/: associations_forward.diff  associations_forward.normalised.rust.txt  container_result.txt  git_commit.txt  metadata.txt  ntpd-rs.sha256  ntpd_version.txt  ntpdig_rs.txt  ntpq-rs.sha256  os_release.txt  peers_forward.diff  peers_reverse.stderr  rv_forward.diff  rv_forward.normalised.real.txt  rv_forward.normalised.rust.txt  rv_forward.real.txt  rv_forward.rust.txt  rv_reverse.stderr  rv_reverse_rs.stderr  rv_reverse_rs.txt
docs/: architecture.md  methodology.md  negative-capabilities.md  ntpsec-code-archaeology-atlas.md  platform-courts.md  source-archaeology.md
docs/courts/: ntp_fp.md  ntp_types.md  ntpq-output-parity.md
scripts/: build-all.sh
xtask/: Cargo.toml
xtask/src/: main.rs
