[workspace]
resolver = "2"
members = [
    "crates/ntpsec-rs-core",
    "crates/ntpsec-rs-io",
    "crates/ntpsec-rs",
    "crates/ntpsec-rs-d",
    "crates/ntpsec-rs-query",
    "crates/ntpsec-rs-dig",
    "crates/ntpsec-rs-keygen",
    "crates/ntpsec-rs-leapfetch",
    "crates/ntpsec-rs-mon",
    "crates/ntpsec-rs-trace",
    "crates/ntpsec-rs-wait",
    "crates/ntpsec-rs-viz",
    "crates/ntpsec-rs-frob",
    "crates/ntpsec-rs-snmpd",
    "crates/ntpsec-rs-time",
    "crates/ntpsec-rs-sweep",
    "crates/ntpsec-rs-loggps",
    "crates/ntpsec-rs-logtemp",
    "xtask",
]

[workspace.package]
version = "0.3.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ntpsec-rs contributors"]
repository = "https://github.com/infinityabundance/ntpsec-rs"
homepage = "https://github.com/infinityabundance/ntpsec-rs"
documentation = "https://github.com/infinityabundance/ntpsec-rs"
readme = "README.md"
keywords = ["ntp", "ntpsec", "time", "synchronization", "time-protocol"]
categories = ["science", "simulation", "network-programming"]
