[package]
name = "ntpsec-rs-core"
description = "Forensic Rust reconstruction of the NTPsec time-discipline brain — deterministic, side-effect-free"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitflags = "2"
libc = "0.2"
thiserror = "2"

# Phase 2: Real crypto (replaces Phase 1 stubs)
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"
aes = "0.8"
cmac = "0.7"
cipher = "0.4"
hex-literal = "0.4"
digest = "0.10"
aes-siv = { version = "0.7", default-features = false, features = ["alloc"] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
getrandom = "0.2"
