[package]
name = "ntpsec-rs-d"
description = "NTPsec daemon — forensic Rust reconstruction of ntpd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.2.4" }
ntpsec-rs-io = { path = "../ntpsec-rs-io", version = "0.2.4" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
