[package]
name = "ntpsec-rs-d"
description = "NTPsec daemon — forensic Rust reconstruction of ntpd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-d"
readme = "README.md"
categories = ["science", "simulation", "command-line-utilities", "network-programming"]
keywords = ["ntp", "ntpsec", "time", "synchronization", "network-time-protocol"]

[[bin]]
name = "ntpd-rs"
path = "src/main.rs"

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
ntpsec-rs-io = { path = "../ntpsec-rs-io", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook = "0.3"
