[package]
name = "ntpsec-rs-dig"
description = "NTP query tool — forensic Rust reconstruction of ntpdig"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.2.7" }
clap = { version = "4", features = ["derive"] }
