[package]
name = "ntpsec-rs-dig"
description = "NTP query tool — forensic Rust reconstruction of ntpdig"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ntpdig-rs"
path = "src/main.rs"

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
