[package]
name = "ntpsec-rs-dig"
description = "NTP query tool — forensic Rust reconstruction of ntpdig"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-dig"
readme = "README.md"
categories = ["command-line-utilities", "network-programming"]
keywords = ["ntp", "ntpsec", "time", "synchronization", "network-time-protocol"]

[[bin]]
name = "ntpdig-rs"
path = "src/main.rs"

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
