[package]
name = "ntpsec-rs-frob"
description = "NTP frob tools — forensic Rust reconstruction of ntpfrob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-frob"
readme = "README.md"
keywords = ["ntp", "ntpsec", "time", "synchronization"]

[dependencies]
clap = { version = "4", features = ["derive"] }
