[package]
name = "ntpsec-rs-frob"
description = "NTP frob tools — forensic Rust reconstruction of ntpfrob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-frob"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["ntp", "ntpsec", "time", "synchronization", "network-time-protocol"]

[dependencies]
clap = { version = "4", features = ["derive"] }
