[package]
name = "ntpsec-rs-io"
description = "Real OS I/O layer for ntpsec-rs — clock, sockets, filesystem, privileges"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-io"
readme = "README.md"
keywords = ["ntp", "ntpsec", "time", "synchronization"]

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
libc = "0.2"
socket2 = "0.5"
# These will be used in Phase 2.2 for the event loop
# ntpsec-rs-io only provides the real implementations of traits from ntpsec-rs-core
