[package]
name = "ntpsec-rs-leapfetch"
description = "NTP leap second fetcher — forensic Rust reconstruction of ntpleapfetch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-leapfetch"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["ntp", "ntpsec", "time", "synchronization", "network-time-protocol"]

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
ureq = "2"
