[package]
name = "ntpsec-rs-loggps"
description = "NTP GPS logger — forensic Rust reconstruction of ntploggps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-loggps"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["ntp", "ntpsec", "time", "synchronization", "time-protocol"]

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
