[package]
name = "ntpsec-rs-logtemp"
description = "NTP temperature logger — forensic Rust reconstruction of ntplogtemp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.2.12" }
clap = { version = "4", features = ["derive"] }
