[package]
name = "ntpsec-rs-mon"
description = "NTP monitor — forensic Rust reconstruction of ntpmon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
