[package]
name = "ntpsec-rs-mon"
description = "NTP monitor — forensic Rust reconstruction of ntpmon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.2.9" }
clap = { version = "4", features = ["derive"] }
