[package]
name = "ntpsec-rs-query"
description = "NTP query client — forensic Rust reconstruction of ntpq"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-query"
readme = "README.md"
categories = ["command-line-utilities", "network-programming"]
keywords = ["ntp", "ntpsec", "time", "synchronization", "time-protocol"]

[[bin]]
name = "ntpq-rs"
path = "src/main.rs"

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
