[package]
name = "ntpsec-rs-sweep"
description = "NTP sweep tool — forensic Rust reconstruction of ntpsweep"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.2.10" }
clap = { version = "4", features = ["derive"] }
