[package]
name = "ntpsec-rs-sweep"
description = "NTP sweep tool — forensic Rust reconstruction of ntpsweep"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-sweep"
readme = "README.md"
keywords = ["ntp", "ntpsec", "time", "synchronization"]

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
