[package]
name = "ntpsec-rs-time"
description = "NTP kernel time management — forensic Rust reconstruction of ntptime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-time"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["ntp", "ntpsec", "time", "synchronization", "time-protocol"]

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
