[package]
name = "ntpsec-rs-trace"
description = "NTP trace tool — forensic Rust reconstruction of ntptrace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.2.12" }
clap = { version = "4", features = ["derive"] }
