[package]
name = "ntpsec-rs-viz"
description = "NTP visualization tool — forensic Rust reconstruction of ntpviz"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.2.12" }
clap = { version = "4", features = ["derive"] }
