[package]
name = "ntpsec-rs-viz"
description = "NTP visualization tool — forensic Rust reconstruction of ntpviz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-viz"
readme = "README.md"
categories = ["command-line-utilities", "visualization"]
keywords = ["ntp", "ntpsec", "time", "synchronization", "time-protocol"]

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
