[package]
name = "ntpsec-rs-wait"
description = "NTP wait tool — forensic Rust reconstruction of ntpwait"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntpsec-rs-wait"
readme = "README.md"
keywords = ["ntp", "ntpsec", "time", "synchronization"]

[dependencies]
ntpsec-rs-core = { path = "../ntpsec-rs-core", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
